# pj-SchoolSubjectSCores-Checking

./: .gitmodules  CMakeLists.txt
src/: main.cpp
